nowy uzytkownik 9 dla managera

--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -119,7 +119,7 @@
                         </f:facet>
                         <p:commandButton icon="pi pi-envelope" actionListener="#{pitWysylkaView.robPIT1129(itempity44)}" update="@parent:@parent" 
                                          rendered="#{podpisView.jestkarta eq true and itempity44.przekroczenie eq false and itempity44.status eq null}">
-                            <p:confirm type="popup" header="Potwierdzenie" message="Wysłać deklarację do urzędu?" icon="pi pi-exclamation-triangle"/>
+<!--                            <p:confirm type="popup" header="Potwierdzenie" message="Wysłać deklarację do urzędu?" icon="pi pi-exclamation-triangle"/>-->
                         </p:commandButton>
                     </p:column>
                     <p:column width="30" style="text-align: center;">
